# lab-ai

./: .env  .gitignore  README.md  docker-compose.yml  mypy.ini  pyproject.toml
api/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schema_processor.py  sql_generator.py  vector_store.py
app/: main.py
app/routers/: status.py
kb/: aep.json  ao.json  ar.json  arr.json  asa.json  c.json  catalog_index.jsonl  cti.json  ep.json  i.json  m.json  mc.json  o.json  r.json  rr.json  sa.json  tat.json
kb - Copy/: aep.json  ao.json  ar.json  arr.json  asa.json  c.json  catalog_index.csv  cti.json  ep.json  i.json  m.json  mc.json  o.json  r.json  rr.json  sa.json  tat.json
tests/routers/: test_status.py
